create scripts and add script src

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
         >
         <p>An instructor focused on helping pople start programming for web</p>
 
-        <ul>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=cSPfeTwl8Kw"
-              target="_Blank"
+        <ul id="socialLinks">
+          <li class="youtube">
+            <a href="https://www.youtube.com/maykbrito" target="_Blank"
               ><img src="imagens/youtube.svg" alt="imagem youtube" />
             </a>
           </li>
 
-          <li>
-            <a href="https://www.instagram.com/baianorasr" target="_Blank"
+          <li class="instagram">
+            <a href="https://www.instagram.com/maykbrito" target="_Blank"
               ><img src="imagens/instagram.svg" alt="imagem instagram" />
             </a>
           </li>
 
-          <li>
-            <a href="https://www.facebook.com/adson.reus" target="_Blank"
+          <li class="facebook">
+            <a href="https://www.facebook.com/maykbrito" target="_Blank"
               ><img src="imagens/facebook.svg" alt="imagem facebook" />
             </a>
           </li>
 
-          <li>
-            <a href="https://twitter.com/BaianorASR" target="_Blank"
+          <li class="twitter">
+            <a href="https://twitter.com/maykbrito" target="_Blank"
               ><img src="imagens/twitter.svg" alt="imagem twitter" />
             </a>
           </li>
         </ul>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
