--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
           <span>
             <img src="imagens/logo.svg" alt="Logo Rocketseat" />
           </span>
-          <img src="imagens/perfil.svg" alt="" />
+          <img
+            id="profilePhoto"
+            src="http://lorempixel.com/people/185/185"
+            alt=""
+          />
         </div>
-        <h1>Adson Reis</h1>
-        <a href="https://github.com/BaianorASR" target="_Blank">
-          <img src="imagens/github.svg" alt="" /> BaianorASR</a
+        <h1 id="userName">Seu Nome</h1>
+        <a id="githubLogin" href="https://github.com/" target="_Blank">
+          <img src="imagens/github.svg" alt="" /><span id="githubName"
+            >Seu Nome</span
+          ></a
         >
-        <p>An instructor focused on helping pople start programming for web</p>
+        <p id="userBio">
+          An instructor focused on helping pople start programming for web
+        </p>
 
         <ul id="socialLinks">
           <li class="youtube">
