--- a/BAKUP/index.html
+++ b/BAKUP/index.html
@@ -67,10 +67,9 @@
             </a>
           </li>
         </ul>
-        
+
       </div>
-      <div class="cabo"></div>
-      <div class="faixa"></div>
+    </main>
 
     <script src="script.js"></script>
   </body>
