--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       rel="stylesheet"
     />
 
-    <audio src="https://www.youtube.com/watch?v=cSPfeTwl8Kw" autoplay></audio>
   </head>
   <body>
     <main>
@@ -41,7 +40,7 @@
           ></a
         >
         <p id="userBio">
-          An instructor focused on helping pople start programming for web
+          An instructor focused on helping popple start programming for web
         </p>
 
         <ul id="socialLinks">
@@ -74,5 +73,6 @@
      
 
     <script src="script.js"></script>
+  
   </body>
 </html>
